test/spec_vectors/func_ptrs/fail/module_7.wat
(module (import "spectest" "print_i32" (func (type 43))))